# rscrypt

./: Cargo.toml  README.md
src/: lib.rs  rscrypt.rs  tests.rs
