[package]
name = "rscrypt"
description = "rscrypt is a simple, fast, and secure encryption tool written in Rust."
version = "0.1.0"
edition = "2021"
authors = ["Achaq <contact@achaq.codes>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
sha2 = "*"
hex-literal = "0.3.4"
regex = "1"

